scss/style.scss
/* ... */
  
  .header-contact .header-donate:hover {
    background: $donate-button-hover;
  }
  /*
  p.share-world {
    font-size: 0.833333333rem;
    margin-top: 20px;
  }

  */
  footer {
    position: relative;
    background: #333E48;
    color: #FFF;
  }
  
  footer::before {
    content: "";
    height: 50px;
    background: url(/themes/custom/assistb5subtheme/images/gb_slice.png) bottom center no-repeat;
    position: absolute;
    top: 0px;
    width: 100%;
    margin-top: 0px;
    background-position: 0px bottom;
  }
  .zone-footer {
    padding-top: 40px;
  }

  footer.footer-dark a:hover {
    color: $nav-tabs-link-active-bg;
  }
  footer .dropdown-item:hover,
  footer .dropdown-item:focus,
  footer .dropdown-item.active {
    background: none !important;
  }

  footer nav a:link, 
  footer nav a:visited {
    color: #f8f9fa; /* same as footer dark a */
  }

  /* Main Menu */

  #zone-menu ul.navbar-nav {
    margin: auto;
  }

  #zone-footer-second ul.navbar-nav {
    flex-direction: row;
    flex-wrap: wrap;
  }

  @media screen and (max-width: 840px) {
    #zone-footer-second ul.navbar-nav {
      flex-direction: column;
    }
  }

  #zone-footer-second .dropdown-menu {
    display: block;
    border: none;
    background-color: inherit;
  }
  #zone-footer-second span.dropdown-toggle {
    display:none;
  }

  /*
  .main-menu-superfish {
    font-size: 0.83rem;
  }
  .sf-menu.sf-style-white a, .sf-menu.sf-style-white span.nolink {
      border: 0px;
      color: #000;
      background-color: #FFF;
      padding: 0.75em 1em;
      font-size: 1rem;
      font-family: 'Cabin', sans-serif;
      font-weight: 400;
      line-height: 1.5;
      text-decoration: none;
  }
  .sf-menu li.sfHover > ul {
    top: 3em;
  }
  /*.sf-menu.sf-style-white .sf-sub-indicator {
    display: none;
  }*/
  /*.sf-menu.sf-style-white a.sf-with-ul,
  .sf-menu.sf-style-white span.nolink.sf-with-ul {
    padding-right: 1em;
  }*/

  /*
  span.nolink > .sf-sub-indicator {
    top: 1.1em;
  }
  .sf-accordion-button {
    background: #CCCCCC;
  }
    
  .sf-menu.sf-style-white span.nolink.sf-with-ul {
    cursor: pointer;
  }
  */

  /* "Donate" menu link - only show styled on large screens and above */
  
  /*#superfish-1 li#menu-1023-1 */
  @include media-breakpoint-up (lg) {
    #block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child {
      display: block;
      position: absolute;
      right: 0;
      top: -4px;
      background: transparent;
      z-index: 100;
    }

    /* #superfish-1 #menu-1023-1 a */
    #block-assistb5subtheme-main-navigation ul.navbar-nav li.nav-item:last-child a {
      border: 0px;
      color: #FFF;
      background-color: #FF671D;
      padding: 2em;
      font-size: 1rem;
      font-family: 'Cabin', sans-serif;
      font-weight: 400;
      line-height: 1.5;
      text-decoration: none;
      border-bottom-left-radius: 10px;
      border-bottom-right-radius: 10px;
    
    }
    
    /* #superfish-1 #menu-1023-1 a:hover */
    #block-assistb5subtheme-main-navigation li:last-child a:hover {
      background: #6ABF4B;
    }
  }
 
  /* Accordion Menu*/
  .sf-accordion-toggle {
    text-align: center;
    width: 100%;
    display: block;
    height: 50px;
  
  }
  /*
  div.sf-accordion-toggle.sf-style-white a {
    border: 0px;
        color: #FFF;
        padding: 0.5em;
        display: block;
        font-size: 1rem;
        background: #009ADE;
        border-radius: 10px;
        text-decoration: none;
        font-size: 1.7em;
  }
  div.sf-accordion-toggle.sf-style-white a:hover {
    background: #6ABF4B;
  }
  div.sf-accordion-toggle.sf-style-white a.sf-expanded {
    background: #6ABF4B;
    
  }
  .sf-menu.sf-style-white li:hover, .sf-menu.sf-style-white li.sfHover, .sf-menu.sf-style-white a:focus, .sf-menu.sf-style-white a:hover, .sf-menu.sf-style-white a:active, .sf-menu.sf-style-white span.nolink:hover, .sf-menu.sf-style-white.sf-navbar li li {
    background: #6ABF4B;
  }
  .sf-menu a:hover,
  .sf-menu.sf-style-white span.nolink:hover {
    color: #FFF;
  }
  */
  /* Header Slideshow */
  
  /* temp settings */
  /*
  .front .zone-header-wrapper {
    background: #333;
    color: #FFF;
  }
  */
  /* Header Contact */
  /*
  .logo-img {
      float: none;
      margin-right: 0px; 
      text-align: center;
  }
  */
  .header-contact {
    margin-top: 10px;
    text-align: center;
  }
  .header-contact a {
    text-decoration: none;
    color: #FFF;
    font-size: 1.3rem;
  }
  .header-contact p {
    margin-bottom: 0px;
  }
  .header-contact li {
    display: inline-block;
  }

  @include media-breakpoint-down(md) {
    .logo {
      text-align: center;
    }
    #block-headercontact .text-end {
      text-align: center !important;
    }
  }
  
  /* Front Content */
  #zone-content:not(.front) {
    padding: 10px 1em 50px 1em;
  }
  /*.front .zone-content-wrapper,*/
  .front div.order-1 {
    background: url(/themes/custom/assistb5subtheme/images/header_splash.svg) no-repeat;
    background-position: center 10px ;
  }

  .front .field-name-body {
    padding-top: 40px;
  } 
  /*
  .front .zone-content {
    text-align: center;
  }
  */
  .field-name-field-image {
    margin: 20px 0px;
  }
  .front h1.page-title {
    display: block;
    color: #FFF;
    padding: 40px 0;
    font-size: 1.5rem;
    text-align: center !important;
  }
  div.views-field-view-node-1 span.field-content {
    background: none;
    border: none;
  }
/* ... */

